--- a/wiki/stany_zjednoczone/index.html
+++ b/wiki/stany_zjednoczone/index.html
@@ -14,7 +14,6 @@
 <meta property="og:image:width" content="1193">
 <meta property="og:image:height" content="632">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/fangea/style.css" />
 <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
@@ -28,15 +27,15 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Stany Zjednoczone</div><span>08.09.2024</span></header>
+<header><div>Stany Zjednoczone</div><span>19.06.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Stany Zjednoczone Fangei</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>United States of Fangea</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/mt6jZkJ/usf-flaga.webp" data-description="Flaga Stanów Zjednoczonych"></td><td><img src="https://i.ibb.co/mTTL9n9/lj-Q5-Csf1-RQO626-It-U2h-QZw.png" data-description="Wielka Pieczęć Stanów Zjednoczonych"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_stanów_zjednoczonych/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/wielka_pieczęć_stanów_zjednoczonych/">Godło</a> </td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>Stany Zjednoczone Fangei</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>United States of Fangea</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/mt6jZkJ/usf-flaga.webp" data-description="Flaga Stanów Zjednoczonych" width="90%"></td><td style="text-align: center;"> <img src="https://i.ibb.co/rKjgPYmK/usf-pieczec-godlo.png" data-description="Wielka Pieczęć Stanów Zjednoczonych"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_stanów_zjednoczonych/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/wielka_pieczęć_stanów_zjednoczonych/">Godło</a> </td></tr></tbody></table></td></tr></tbody></table>
 
 <p><b>Stany Zjednoczone Fangei</b>, <b>Stany Zjednoczone</b>, potocznie <b>Sudfangea</b>.</p>
  <div id="source-code" style="display:none;">{|infobox Stany Zjednoczone Fangei
 !t=cc=2 ''United States of Fangea'' !
 |{ibox
-|[[timg:https://i.ibb.co/mt6jZkJ/usf-flaga.webp|Flaga Stanów Zjednoczonych]] || [[timg:https://i.ibb.co/mTTL9n9/lj-Q5-Csf1-RQO626-It-U2h-QZw.png|Wielka Pieczęć Stanów Zjednoczonych]] |
+|t=c [[timg:https://i.ibb.co/mt6jZkJ/usf-flaga.webp|Flaga Stanów Zjednoczonych]] ||t=c [[timg:https://i.ibb.co/rKjgPYmK/usf-pieczec-godlo.png|Wielka Pieczęć Stanów Zjednoczonych]] |
 |t=c (https://grumqy.github.io/fangea/wiki/flaga_stanów_zjednoczonych/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/wielka_pieczęć_stanów_zjednoczonych/)[Godło] |
 }|
 |}
